--- a/API_CRUD/pom.xml
+++ b/API_CRUD/pom.xml
@@ -12,11 +12,18 @@
     <version>2.5.0</version>
 </dependency>
   
+  <!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
+<dependency>
+    <groupId>javax.xml.bind</groupId>
+    <artifactId>jaxb-api</artifactId>
+    <version>2.3.0</version>
+</dependency>
+  
     <!-- https://mvnrepository.com/artifact/org.testng/testng -->
 <dependency>
     <groupId>org.testng</groupId>
     <artifactId>testng</artifactId>
-    <version>6.10</version>
+    <version>7.4.0</version>
     <scope>compile</scope>
 </dependency>
     <!-- https://mvnrepository.com/artifact/com.jayway.restassured/rest-assured -->
@@ -26,6 +33,14 @@
     <version>2.9.0</version>
     <scope>compile</scope>
 </dependency>
+
+<!-- https://mvnrepository.com/artifact/com.relevantcodes/extentreports -->
+<dependency>
+    <groupId>com.relevantcodes</groupId>
+    <artifactId>extentreports</artifactId>
+    <version>2.41.2</version>
+</dependency>
+
     <!-- https://mvnrepository.com/artifact/com.jayway.restassured/json-schema-validator -->
 <dependency>
     <groupId>com.jayway.restassured</groupId>
